ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectLog__c/ApplicationConnectLog__c.object-meta.xml
<CustomObject>
    <description>This object used to store the application REST integration Log</description>
    <label>ApplicationConnectLog</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApplicationConnectLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>