ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectLog__c/fields/NamedCredentialName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialName__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR</complianceGroup>
    <label>NamedCredentialName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>