ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectLog__c/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <label>ResponseStatusCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>