ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationConnectLog__c/fields/ResponseType__c.field-meta.xml
<CustomField>
    <fullName>ResponseType__c</fullName>
    <label>ResponseType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApplicationEndpointMethod</valueSetName>
    </valueSet>
</CustomField>